--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,9 @@ body {
 /* ******* */
 
 .nav-bar {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  /* justify-content: space-between; Space between items */
+  gap: 5px;
   align-items: center;
   height: 7.2rem;
   padding: 0 3.2rem;
@@ -93,33 +94,56 @@ body {
 }
 
 .search {
-  justify-self: center;
+  /* justify-self: center; */
   border: none;
   padding: 1.1rem 1.6rem;
   font-size: 1.8rem;
   border-radius: 0.7rem;
-  width: 40rem;
+  width: 20rem;
   transition: all 0.3s;
   color: var(--color-text);
+  margin-left: 8px;
+  outline: none;
 
-  /* background-color: var(--color-background-900); */
+  /* background-color: var(--color-background-900);
   background-color: var(--color-primary-light);
+  
+*/
+background-color: #333;
 }
-
 .search::placeholder {
   color: var(--color-text-dark);
 }
 
 .search:focus {
   outline: none;
-  box-shadow: 0 2.4rem 2.4rem rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 2.4rem 2.4rem rgba(0, 0, 0, 0.1); */
   transform: translateY(-2px);
 }
 
 .num-results {
+  /* display: flex;
+  align-items: end; */
   justify-self: end;
   font-size: 1.8rem;
 }
+.genre-list {
+  list-style-type: none;
+  /* padding-left: 0; */
+}
+
+.genre-list li {
+  padding: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.genre-list li:hover {
+  background-color: #828c8483; /* Highlight color */
+  color: white; /* Text color change */
+}
+
+
 
 .btn-toggle {
   position: absolute;
