--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,8 @@ body {
   border: none;
   padding: 1.1rem 1.6rem;
   font-size: 1.8rem;
-  border-radius: 0.7rem;
+  border-radius: 5rem;
+  height: 3rem;
   width: 20rem;
   transition: all 0.3s;
   color: var(--color-text);
@@ -369,6 +370,13 @@ background-color: #333;
   align-items: center;
   justify-content: center;
 }
+
+
+/* Login Form CSS */
+
+
+
+
 
 /*
 SPACING SYSTEM (px)
